--- a/views/partials/aio_dld_header.ejs
+++ b/views/partials/aio_dld_header.ejs
@@ -25,4 +25,5 @@
     <button onclick="goToPage('/database')">Card Database</button>
     <button onclick="goToPage('/trade')">Trade Cards</button>
     <button onclick="goToPage('/admin')">Admin</button>
+    <button onclick="goToPage('/logout')">log out</button>
 </div>
