fixed trade id bug, added login check to trading and admin

--- a/views/pages/tradeSelectionPage.ejs
+++ b/views/pages/tradeSelectionPage.ejs
@@ -28,7 +28,7 @@
         <!--Display wanted cards-->
         <div id="wantedCards">
             <h3>Request</h3>
-            <table id="wantedCards" class="cardTable"></table>
+            <table id="wantedCardsTable" class="cardTable"></table>
         </div>
         <!--Display receiver's card inventory-->
         <div id="receiverCards">
