--- a/views/partials/aio_dld_header.ejs
+++ b/views/partials/aio_dld_header.ejs
@@ -30,6 +30,8 @@
         <button onclick="goToPage('/builder')">Deck Builder</button>
         <button onclick="goToPage('/database')">Card Database</button>
         <button onclick="goToPage('/trade')">Trade Cards</button>
-        <button onclick="goToPage('/admin')">Admin</button>
+        <% if (user.type == 'ADMIN') {%>
+            <button onclick="goToPage('/admin')">Admin</button>
+        <% } %>
     <% } %>
 </div>
