upload sign up form and ejs files for sign up and login

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -21,9 +21,11 @@
                 <td><input type="password" id="password" name="password"  placeholder="password"></td> 
             </tr>
 
-            <input type="submit"  onclick="check()" id="submit" value="Sign up">
+            <input type="submit" id="submit" value="Sign up">
         </table>
     </form>
+
+    <a href="/login"><Login/a>
 </body>
 
 </html>
