--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,7 +9,23 @@
 </head>
 
 <body>
-    
+    <form action="/login" method="post">
+        <div>Login</div>
+        <table id="login form">
+            <tr>
+                <th>Username:</th>
+                <td><input type="username" id="username" name="username"  placeholder="username"></td>  
+            </tr>
+            <tr>
+                <th>Password:</th>
+                <td><input type="password" id="password" name="password"  placeholder="password"></td> 
+            </tr>
+
+            <input type="submit"   id="submit" value="Log in">
+        </table>
+    </form>
+
+    <a href="/signup">sign up</a>
 </body>
 
 </html>
