page routing for register

--- a/views/partials/aio_dld_header.ejs
+++ b/views/partials/aio_dld_header.ejs
@@ -16,7 +16,7 @@
     <% } else { %>
 
         <div id="loginDivBefore">
-            <button onclick="goToPage('/login.html')">login</button>
+            <button onclick="goToPage('/login')">login</button>
             <button onclick="goToPage('/signup')">signup</button>
         </div>
     <% } %>
