pack opener edited to use card names

--- a/views/pages/pack-opener.ejs
+++ b/views/pages/pack-opener.ejs
@@ -11,9 +11,9 @@
             
             <h1><%= name %></h1>
 
-            Card1: <%= card1 %><br>
-            Card2: <%= card2 %><br>
-            Card3: <%= card3 %><br> 
+            Card1: <%= card1.name %><br>
+            Card2: <%= card2.name %><br>
+            Card3: <%= card3.name %><br> 
             
             <br>
 
