--- a/views/pages/tradeSelectionPage.ejs
+++ b/views/pages/tradeSelectionPage.ejs
@@ -12,30 +12,42 @@
     <%- include ("../partials/aio_dld_header.ejs") %>
 
     <h1>Trade Selection</h1>
+
     <div id="tradeSelectionContainer">
+
         <!--Display own card inventory-->
         <div id="initiatorCards">
             <h3>Owned Cards</h3>
-            <table id="initiatorCardsTable" class="cardTable"></table>
+            <table id="initiatorCardsTable" class="cardTable">
+                <td class="noMatchMessage" hidden="true">No Cards</td>
+            </table>
         </div>
 
         <!--Display offered cards-->
         <div id="offeredCards">
             <h3>Offer</h3>
-            <table id="offeredCardsTable" class="cardTable"></table>
+            <table id="offeredCardsTable" class="cardTable">
+                <td class="noMatchMessage">No Cards</td>
+            </table>
         </div>
 
         <!--Display wanted cards-->
         <div id="wantedCards">
             <h3>Request</h3>
-            <table id="wantedCardsTable" class="cardTable"></table>
+            <table id="wantedCardsTable" class="cardTable">
+                <td class="noMatchMessage">No Cards</td>
+            </table>
         </div>
         <!--Display receiver's card inventory-->
         <div id="receiverCards">
             <h3>Trader's Cards</h3>
-            <table id="receiverCardsTable" class="cardTable"></table>
+            <table id="receiverCardsTable" class="cardTable">
+                <td class="noMatchMessage" hidden="true">No Cards</td>
+            </table>
         </div>
     </div>
+    
+    <button disabled="true">Send Trade Request</button>
         
     <!-- store data from database in local variables-->
     <script>
