login routing fixed

--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -14,7 +14,7 @@
     <% } else { %>
         <p>Welcome to AIO DLD</p>
         <p>Please Login</p>
-        <a href="login.html">Login Here</a>
+        <a href="/login">Login Here</a>
     <% } %>
 </body>
 
