--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,32 +1,3 @@
-/*.jumbotron {
-  background: #532F8C;
-  color: white;
-  padding-bottom: 80px; }
-  .jumbotron .btn-primary {
-    background: #845ac7;
-    border-color: #845ac7; }
-    .jumbotron .btn-primary:hover {
-      background: #7646c1; }
-  .jumbotron p {
-    color: #d9ccee;
-    max-width: 75%;
-    margin: 1em auto 2em; }
-  .navbar + .jumbotron {
-    margin-top: -20px; }
-  .jumbotron .lang-logo {
-    display: block;
-    background: #B01302;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    border: 2px solid white; }
-    .jumbotron .lang-logo img {
-      max-width: 100%; }
-*/
-
-
 /* table */
 table {
     border: 1px solid;
@@ -52,12 +23,19 @@ td, th {
 }
 
 .popupContents {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    display: block;
     background-color: white;
+    border-collapse: collapse;
+
     position: absolute;
     bottom: 10%;
     right: 10%;
+
     border: 3px solid;
     border-radius: 0.2em;
+
     width: 80%;
     height: 80%;
     padding: 5%;
@@ -67,21 +45,31 @@ td, th {
 
 .popupContents tbody, .popupContents tbody label{
     border: 1px solid;
-    border-collapse: collapse;
 
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(10, 1fr);
     width: 100%;
     height:100%;
     text-align: center;
 }
 
-.cardTable{
+
+.cardTable tbody{
+    overflow-y: scroll;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .card{
+    width: 100%;
+    min-height: 5vw;
+    padding-top: 75%;
+    padding-bottom: 75%;
+}
+
+select {
     width: 100%;
     height: 100%;
 }
