--- a/views/pages/adminPage.ejs
+++ b/views/pages/adminPage.ejs
@@ -11,70 +11,75 @@
 <body onload="adminSetUp()">
     
     <%- include ("../partials/aio_dld_header.ejs") %>
+    <%- include ("../partials/aio_dld_row_templates.ejs") %>
+    <%- include ("../partials/aio_dld_popups.ejs") %>
 
-    <!-- row template for user data-->
-    <table hidden="true">
-        <tr class="adminSampleRow">
-            <td class="online">online</td>
-            <td class="id">id</td>
-            <td class="username">name</td>
-            <td class="password">pass</td>
-            <td><button onclick="toggleTable(false,'Owned Cards',event)">cards</button></td>
-            <td><button onclick="toggleTable(false,'Friends',event)">friends</button></td>
-            <td><button onclick="toggleTable(false,'Ongoing Trades',event)">trades</button></td>
-            <td class="type">type</td>
-        </tr>
-    </table>
-
-    <h1>User Data</h1>
-    <p>Click on "friends", "trades", "cards" to view full array in a popup. 
-        Click outside the popup to close.</br>
-
-        To finish/implement:</br>
-        - online status </br>
-        - pop up scrolling
-    </p>
-
-    <!-- search-->
+    <!--tabs-->
     <div>
-        <input id="searchBox" placeholder="Search User" onkeyup="filterUsers()"/>
-        
-        <input type="checkbox" value="ADMIN" id="adminCheckbox1" checked="checked" onclick="filterUsers()">
-        <label for="adminCheckbox1">ADMIN</label>
-        <input type="checkbox" value="USER" id="adminCheckbox2" checked="checked" onclick="filterUsers()">
-        <label for="adminCheckbox2">USER</label>
+        <button onclick="changeTab(0)">User Data</button>
+        <button onclick="changeTab(1)">Trade Data</button>
     </div>
 
-    <!-- table with all user data-->
-    <div id="userTableContainer">
-        <table id="userTable">
-            <tr>
-                <th>ONLINE</th>
-                <th>ID</th>
-                <th>USERNAME</th>
-                <th>PASSWORD</th>
-                <th>CARDS</th>
-                <th>FRIENDS</th>
-                <th>TRADES</th>
-                <th>TYPE</th>
-            </tr>
-            <td class="noMatchMessage" hidden="true" colspan="8">No users</td>
-        </table>
+    <!--user data-->
+    <div class="tab" id="adminUsersTab">
+        <p>Click on "friends", "trades", "cards" to view full array in a popup. 
+            Click outside the popup to close.</br>
+
+            To finish/implement:</br>
+            - online status </br>
+            - formatting fixes
+        </p>
+
+        <!-- search-->
+        <div>
+            <input id="searchBox" placeholder="Search User" onkeyup="filterUsers()"/>
+            
+            <input type="checkbox" value="ADMIN" id="adminCheckbox1" checked="checked" onclick="filterUsers()">
+            <label for="adminCheckbox1">ADMIN</label>
+            <input type="checkbox" value="USER" id="adminCheckbox2" checked="checked" onclick="filterUsers()">
+            <label for="adminCheckbox2">USER</label>
+        </div>
+
+        <!-- table with all user data-->
+        <div id="userTableContainer">
+            <table id="userTable">
+                <tr>
+                    <th>ONLINE</th>
+                    <th>ID</th>
+                    <th>USERNAME</th>
+                    <th>PASSWORD</th>
+                    <th>CARDS</th>
+                    <th>FRIENDS</th>
+                    <th>TRADES</th>
+                    <th>TYPE</th>
+                </tr>
+                <td class="noMatchMessage" hidden="true" colspan="8">No users</td>
+            </table>
+        </div>
     </div>
 
-    <!-- use to display card/friend/trade info-->
-    <div class="popup" id="adminTableInfoPopUp" onmouseup="toggleTable(true,0,event)" hidden="true">
-        <table class="popupContents" id="adminTableInfoTable">
-            <thead>
-                <th id="adminTableInfoHeader">ColName</th>
-            </thead>
-            <td class="noMatchMessage" hidden="true">Nothing to Show</td>
-            <tbody></tbody>
-        </table>
+    <!--trade data-->
+    <div class="tab" id="adminTradesTab" hidden="true">
+        <p>Click outside the popup to close.</p>
+
+        <!-- table with all user data-->
+        <div id="tradeTableContainer">
+            <table id="tradeTable">
+                <tr>
+                    <th>ID</th>
+                    <th>SENDER ID</th>
+                    <th>RECEIVER ID</th>
+                    <th>CARDS</th>
+                    <th>STATUS</th>
+                </tr>
+                <td class="noMatchMessage" hidden="true" colspan="8">No trades</td>
+            </table>
+        </div>
     </div>
 
     <!-- store data from database in local variable-->
     <script>
-        let userData = <%- JSON.stringify(results)%>;
+        let userData = <%- JSON.stringify(userResults)%>;
+        let tradeData = <%- JSON.stringify(tradeResults)%>;
     </script>
 </body>
