--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -6,22 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/scripts/login.js" defer></script>
 </head>
 
 <body>
-    <form action="/login" method="post">
+    <form id="loginForm" action="/login" method="post">
         <div>Login</div>
         <table id="login form">
             <tr>
                 <th>Username:</th>
-                <td><input type="username" id="username" name="username"  placeholder="username"></td>  
+                <td><input type="username" id="username" name="username"  placeholder="username"
+                    onkeydown="goToNext('password', event)" autofocus></td>  
             </tr>
             <tr>
                 <th>Password:</th>
-                <td><input type="password" id="password" name="password"  placeholder="password"></td> 
+                <td><input type="password" id="password" name="password"  placeholder="password"
+                    onkeydown="goToNext('submit', event)"></td> 
             </tr>
 
-            <input type="submit"   id="submit" value="Log in">
+            <input type="button" value="Log in" onclick="goToNext('submit', event)">
         </table>
     </form>
 
