--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -4,17 +4,34 @@
 	<meta charset = "utf-8"/>
 	<title>Deck Editor</title>
 	<link rel="stylesheet" href="/stylesheets/main.css"/>
-    
+    <link rel="stylesheet" href="/stylesheets/deckBuilder.css"/>
+    <script src="/scripts/deckBuilder.js" defer></script>
 </head>
 
-<body>
+<body onload="deckBuilderPageSetUp()">
 
     <%- include ("../partials/aio_dld_header.ejs") %>
 
-    <ul>
-        <% for (var i = 0; i < collection.length; i++) { %>
-            <li><%= cards[i].name %> : x<%= collection[i] %></li>
-        <% }; %>
-    </ul>
+    <div class="horizontalAlignContainer">
+        <div id="collection" class="deckBuilderTable">
+            <h3>Collection</h3>
+            <table id="collectionCardsTable" class="cardTable" style="height: 90%;">
+                <td class="noMatchMessage" hidden="true">No Cards</td>
+            </table>
+        </div>
+    
+        <div id="deck" class="deckBuilderTable">
+            <h3>Deck</h3>
+            <table id="deckCardsTable" class="cardTable" style="height: 90%;">
+                <td class="noMatchMessage" hidden="true">No Cards</td>
+            </table>
+        </div>
+    </div>
+
+
+    <script>
+        let cardCollection = [<%- collection%>];
+        let cards = [<%- cards%>];
+    </script>
     
 </body>
