Deckbuilder endpoints extracted

--- a/views/pages/deckSelection.ejs
+++ b/views/pages/deckSelection.ejs
@@ -17,6 +17,6 @@
         <% }); %>
     </ul>
 
-    <button onclick="goToPage('/build')">New Deck</button>
+    <button onclick="goToPage('/deckBuild/build')">New Deck</button>
     
 </body>
