--- a/views/partials/aio_dld_header.ejs
+++ b/views/partials/aio_dld_header.ejs
@@ -28,7 +28,7 @@
     <% if (user) {%>
         <button onclick="goToPage('/opener')">Pack Opener</button>
         <button onclick="goToPage('/database')">Card Database</button>
-        <button onclick="goToPage('/decks')">Deck Builder</button>
+        <button onclick="goToPage('/deckBuild/decks')">Deck Builder</button>
         <button onclick="goToPage('/trade')">Trade Cards</button>
         <% if (user.type == 'ADMIN') {%>
             <button onclick="goToPage('/admin')">Admin</button>
