card viewing functionality is implemented

--- a/views/partials/aio_dld_header.ejs
+++ b/views/partials/aio_dld_header.ejs
@@ -27,7 +27,7 @@
     <button onclick="goToPage('/landing')">Home</button>
     <% if (user) {%>
         <button onclick="goToPage('/opener')">Pack Opener</button>
-        <button onclick="goToPage('/database')">Card Database</button>
+        <button onclick="goToPage('/cardView')">Card Database</button>
         <button onclick="goToPage('/deckBuild/decks')">Deck Builder</button>
         <button onclick="goToPage('/trade')">Trade Cards</button>
         <% if (user.type == 'ADMIN') {%>
