--- a/views/pages/cardDatabase.ejs
+++ b/views/pages/cardDatabase.ejs
@@ -27,27 +27,32 @@
                      <% } %>
                 </table>
             </div>
-            <div id="displayOwned" style="display:none; clear:left">
-                <input type="text" class="searchbar" name="sBar" placeholder="SEARCH"> <!--search functionality for later-->
-                <table class="displayTable">
-                    <%let counter = 0; %>
-                    <% for(i=0;i<userCards.length;i++) { %>
-                        <% if(userCards[i]>0) { %>
-                            <% for(j=0;j<userCards[i];j++) { %>
-                                <% if(counter%4 == 0) { %>
-                                    <tr>
-                                <% } %>
-                                    <td>
-                                        <% counter++; %>
-                                        <img src= "<%=allCards[i].image%>", alt="<%=allCards[i].name%>", onclick="relocate('<%-allCards[i].name%>')">
-                                    </td>
-                                <% if(counter%4 == 0 || counter==userCards.length) { %> 
-                                    </tr>
+            <div id="displayOwned" style="display:none; clear:left"> 
+                <div style="display:flex; flex-direction:column-reverse">
+                    <table class="displayTable" style>
+                        <%let counter = 0; %>
+                        <% for(i=0;i<userCards.length;i++) { %>
+                            <% if(userCards[i]>0) { %>
+                                <% for(j=0;j<userCards[i];j++) { %>
+                                    <% if(counter%4 == 0) { %>
+                                        <tr>
+                                    <% } %>
+                                        <td>
+                                            <% counter++; %>
+                                            <img src= "<%=allCards[i].image%>", alt="<%=allCards[i].name%>", onclick="relocate('<%-allCards[i].name%>')">
+                                        </td>
+                                    <% if(counter%4 == 0 || counter==userCards.length) { %> 
+                                        </tr>
+                                    <% } %>
                                 <% } %>
                             <% } %>
                         <% } %>
-                    <% } %>
-                </table>
+                    </table>
+                    <div>
+                        <input type="text" class="searchbar" name="sBar" placeholder="SEARCH" > <!--search functionality for later-->
+                        <p style="float:right">You currently own: <%=counter%> cards.</p>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="/scripts/cardViewer.js"></script>
