--- a/views/partials/aio_dld_popups.ejs
+++ b/views/partials/aio_dld_popups.ejs
@@ -21,9 +21,9 @@ hidden="true">
 <div class="popup" id="adminTradeTableInfoPopUp" onmouseup="toggleTable(true, 0, event, 'trade')" 
 hidden="true">
     <table class="popupContents">
-        <tbody style="display:table;">
+        <tbody style="display:table; height: 100%;">
             <tr style="height:10%;">
-                <th>Offered</th>
+                <th style="width:50%;">Offered</th>
                 <th>Requested</th>
             </tr>
             <tr>
