--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -45,14 +45,12 @@ td, th {
 
 .popupContents tbody, .popupContents tbody label{
     border: 1px solid;
-
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     width: 100%;
-    height:100%;
+    min-height: 100%;
     text-align: center;
 }
-
 
 .cardTable tbody{
     overflow-y: scroll;
@@ -63,10 +61,7 @@ td, th {
 }
 
 .card{
-    width: 100%;
-    min-height: 5vw;
-    padding-top: 75%;
-    padding-bottom: 75%;
+    width: 6.7vw;
 }
 
 select {
@@ -78,4 +73,13 @@ select {
     width: 100%;
     height: 100%;
     padding: 4%;
+}
+
+.title{
+    margin: 0;
+}
+
+.subtitle{
+    margin-top: 0; 
+    margin-bottom: 2%;
 }
