Deck builder in progress (major bug)

--- a/public/stylesheets/deckBuilder.css
+++ b/public/stylesheets/deckBuilder.css
@@ -8,8 +8,16 @@
     margin: 1%;
 }
 
+#collection{
+    margin-right: 10%;
+}
+
+#deck{
+    float: right;
+}
+
 .deckBuilderTable{
-    width:30%;
+    width:35%;
     height: inherit;
 }
 
