--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -21,10 +21,16 @@
         </div>
     
         <div id="deck" class="deckBuilderTable">
+            <input type="text" id="deckName" placeholder="Name this deck">
             <h3>Deck</h3>
             <table id="deckCardsTable" class="cardTable" style="height: 90%;">
                 <td class="noMatchMessage" hidden="true">No Cards</td>
             </table>
+            <h3>Extra Deck</h3>
+            <table id="extraDeckCardsTable" class="cardTable" style="height: 90%;">
+                <td class="noMatchMessage" hidden="true">No Cards</td>
+            </table>
+            <button id="saveDeck" type="button" onclick="saveDeck()">Save Deck</button>
         </div>
     </div>
 
